Change the default index page

--- a/app/markup/layouts/_app.pug
+++ b/app/markup/layouts/_app.pug
@@ -4,7 +4,7 @@ html(lang="en")
     block title
 
     link(rel="stylesheet" type="text/css" href="/assets/style.css")
-    link(rel="icon" type="image/png" href="/assets/images/favicon.png")
+    link(rel="icon" type="image/png" href="/assets/images/logo.png")
     block scripts
   body
     block content
